--- a/Django_Docker/toolkeeper_app/templates/common_history_add_js.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add_js.html
@@ -13,6 +13,7 @@
     const create = document.getElementById("create").innerText;
 
     const check_list = document.getElementById("check_list");
+    const switch_width = document.getElementById("switch_width");
 
     const box_x_min = Number(document.getElementById("box_x_min").innerText);
     const box_y_min = Number(document.getElementById("box_y_min").innerText);
@@ -96,6 +97,30 @@
         box_in[i].checked = true;
     }
 
+    function switch_scroll() {
+        if (window.innerWidth >= 768) {
+            var max_h = canvas.height - all_check.getBoundingClientRect().height - 16;
+            switch_width.style.width = "auto";
+            check_list.style.marginTop = "auto";
+            // for (let i = 0; i < set.length; i++) {
+            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
+            // }
+        }
+        else {
+            var max_h = 200;
+            switch_width.style.width = 210 * set.length;
+            check_list.style.marginTop = "30px";
+            // for (let i = 0; i < set.length; i++) {
+            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
+            // }
+        }
+        check_list.style.height = max_h;
+
+        for (let i = 0; i < set.length; i++) {
+            console.log(window.innerWidth);
+            console.log(document.getElementById(`ctrl_${i}`).style.width);
+        }
+    };
 
     function auto_fit() {
         if (canvas.width != preview.getBoundingClientRect().width.toFixed()) {
@@ -118,9 +143,11 @@
             x_min_fit = box_x_min * x_fit;
             y_min_fit = box_y_min * y_fit;
             
-            check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height};`;
+            // check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
             ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
         }
+
+        switch_scroll();
 
         console.log(`preview.width:  ${preview.getBoundingClientRect().width} px`);
         console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
@@ -203,7 +230,7 @@
         let x_min_fit = box_x_min * x_fit;
         let y_min_fit = box_y_min * y_fit;
 
-        check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height};`;
+        // check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
 
         for (let i = 0; i < set.length; i++) {
             if (item_box >= 2 && document.getElementById(`item_${i+1}_x_min`).innerText != "None") {
@@ -215,6 +242,8 @@
                 box_li[i][3] *= y_fit;
             }
         }
+        switch_scroll();
+
         draw_box(-1);
     };
 
@@ -376,5 +405,27 @@
                 document.getElementById(`id_form-${i}-result_class`).value = 0;
             }
         }
+    };
+
+    
+    const width_xxl = 1400;
+    const width_xl = 1200;
+    const width_lg = 992;
+    const width_md = 768;
+    const width_sm = 576;
+
+    let width_class = window.innerWidth;
+
+    // ウィンドウのリサイズ時にスクロール状態を切り替える
+    window.onresize = () => {
+        if (width_class != width_xxl && window.innerWidth >= width_xxl) width_class = width_xxl;
+        else if (width_class != width_xl && window.innerWidth < width_xxl && window.innerWidth >= width_xl) width_class = width_xl;
+        else if (width_class != width_lg && window.innerWidth < width_xl && window.innerWidth >= width_lg) width_class = width_lg;
+        else if (width_class != width_md && window.innerWidth < width_lg && window.innerWidth >= width_md) width_class = width_md;
+        else if (width_class != width_sm && window.innerWidth < width_md) width_class = width_sm;
+        else return;
+
+        auto_fit();
+        draw_box();
     };
 </script>
