--- a/Django_Docker/toolkeeper_app/templates/common_history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add.html
@@ -1,33 +1,20 @@
-<div id="check_list" style="overflow-y: scroll; height: 100%;">
-    {% for item in items reversed %}
-    <div class="row justify-content-around w-100 my-2">
-        <div class="col-auto col-md-6" id="item_{{ forloop.counter0 }}_name" style="display:flex; align-items: center; font-size: 16px;">{{ item.item_name }}</div>
-        <div class="col-auto">
-            {% if forloop.first %}
-                <input class="btn-check" type="radio" id="set_{{ forloop.counter0 }}" name="set" checked>
-            {% else %}
-                <input class="btn-check" type="radio" id="set_{{ forloop.counter0 }}" name="set">
-            {% endif %}
-            <label class="btn btn-outline-primary" for="set_{{ forloop.counter0 }}" onclick="auto_fit(); draw_box('{{ forloop.counter0 }}');">選択</label>
-        </div>
-    </div>
-            
-    <div class="row justify-content-around w-100">
-        <div class="col-12 col-xl-5 my-xl-2">
-            <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check" disabled>
-            <label class="btn btn-outline-primary w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
-                <span name="checked">チェック</span>
-            </label>
-        </div>
+{% for item in items reversed %}
+<div class="row justify-content-around m-auto" id="ctrl_{{ forloop.counter0 }}">
+    {% include 'common_history_check_list.html' %}
 
-        <div class="my-btn col-12 col-xl-5 my-2 my-xl-2">
-            <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
-            <label class="my-check-red btn w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
-        </div>
+    <div class="my-check col-12 col-lg-6 my-lg-3 mt-3">
+        <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check" disabled>
+        <label class="btn my-btn-common my-check-green w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
+            <span name="checked">チェック</span>
+        </label>
     </div>
-    {% endfor %}
+    
+    <div class="my-check col-12 col-lg-6 my-3">
+        <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
+        <label class="btn my-btn-common my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
+    </div>
 </div>
 
-<div id="all_check">
-    <button class="btn btn-primary w-100 mt-4" type="button">一括チェック</button>
-</div>
+{% endfor %}
+
+
