--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}アイテム追加 | toolkeeper{% endblock %}
+{% block title %}アイテム登録 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
     <form method="POST" enctype='multipart/form-data'>
-        <div class="row justify-content-around w-100 my-3" style="text-align: center;">
-            <h3 class="col-12 col-md-9 mb-3 mb-md-0" style="text-align: center;">すべてのアイテムの名前を入力してください。</h3>
-            <button class="col-6 col-md-2 btn btn-3 my-auto" type="button" onclick="image.onload();">画像読込</button>
+        <div class="row justify-content-around mt-4" style="text-align: center;">
+            <h3 class="col-12 col-md-9" style="text-align: center; margin-top: 0.5rem;">アイテムの名前を全て入力してください。</h3>
+            <button class="col-6 col-md-2 btn btn-3 my-2 my-md-auto" type="button" onclick="image.onload();">画像読込</button>
         </div>
 
         <hr>
 
-        <div class="row">
-            <div class="col-8 h-100" style="position: relative;">
+        <div class="row justify-content-around">
+            <div class="col-11 col-sm-8 h-100" style="position: relative;">
                 <canvas id="canvas" style="width: 100%; height: auto;"></canvas>
                 <img id="image" src="{{ image.url }}" width="{{ image.width }}" height="{{ image.height }}" style="display: none;"/>
                 <span id="box_x_min" style="display: none;">{{ box_x_min }}</span>
@@ -25,7 +25,7 @@
                 <span id="box_y_max" style="display: none;">{{ box_y_max }}</span>
             </div>
 
-            <div class="col-4">
+            <div class="col-11 col-sm-4 mt-3 mt-sm-0">
                 {% csrf_token %}
                 {{ formset.management_form }}
                 <div id="form">
@@ -37,8 +37,8 @@
                 <hr>
                 
                 <div class="row justify-content-around w-100 ms-0" id="form_edit">
-                    <button class="col-5 btn btn-3" type="button" id="item_add">追加</button>
-                    <button class="col-5 btn btn-3" type="button" id="item_del">削除</button>
+                    <button class="col-5 col-sm-12 col-md-5 mt-auto btn my-btn-common my-btn-blue" type="button" id="item_add">追加</button>
+                    <button class="col-5 col-sm-12 col-md-5 mt-auto mt-sm-3 mt-md-auto btn my-btn-common my-btn-red" type="button" id="item_del">削除</button>
                 </div>
             </div>
         </div>
@@ -90,12 +90,14 @@
     }
 
     function switch_scroll() {
-        var max_h = canvas.getBoundingClientRect().height - form_edit.getBoundingClientRect().height - 50;
+        if (window.innerWidth >= 576) var max_h = canvas.getBoundingClientRect().height - form_edit.getBoundingClientRect().height - 50;
+        else var max_h = 130;
         console.log("max_h: " + max_h);
         console.log("formset.height: " + form.getBoundingClientRect().height);
         if (form_area.getBoundingClientRect().height > max_h) form.style.overflowY = "scroll";
         else form.style.overflowY = "visible";
         console.log("form.style: " + form.style.overflowY);
+        
         auto_fit_height(max_h);
     }
 
