--- a/Django/item_tracker/tracker/templates/group_delete.html
+++ b/Django/item_tracker/tracker/templates/group_delete.html
@@ -1,3 +1,4 @@
+<!-- group_leave.html -->
 {% extends 'base.html' %}
 
 {% block contents %}
@@ -5,11 +6,12 @@
     <div class="container px-5">
         <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-3">
             <div class="text-center mb-5">
-                <h5 class="mb-5">グループを削除しますか？</h5>
+                <h2 class="mb-5">グループから退会しますか？</h2>
+                <p class="lead fw-normal text-muted text-center mb-3" style="font-size: 15px;"><u><font color="#99CC33">{{ group.group_name }}</font></u>から退会してもよろしいですか？</p>
                 <form method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-danger mx-2" name="confirm_delete">削除する</button>
-                    <button type="submit" class="btn btn-secondary mx-2" name="cancel_delete">キャンセル</button>
+                    <button type="submit" class="btn btn-danger mx-2" name="confirm_leave">退会する</button>
+                    <button type="submit" class="btn btn-secondary mx-2" name="cancel_leave">キャンセル</button>
                 </form>
             </div>
         </div>
