--- a/Django/item_tracker/tracker/templates/group_host.html
+++ b/Django/item_tracker/tracker/templates/group_host.html
@@ -32,7 +32,7 @@
         </div>
         <div class="d-grid">
             <button class="btn btn-lg btn-2">
-                <a class="nav-link" href="{% url 'tracker:group_detail' group.id %}">グループ詳細に戻る</a>
+                <a class="nav-link" href="{% url 'toolkeeper_app:group_detail' group.id %}">グループ詳細に戻る</a>
             </button>
         </div>
     </div>
