ページタイトルとnavのハイライト(logout)

--- a/Django_Docker/accounts/templates/account/confirm_logout.html
+++ b/Django_Docker/accounts/templates/account/confirm_logout.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}ログアウト | ToolKeeper{% endblock %}
+
+{% block active_logout %}active{% endblock %}
+
 {% block contents %}
 <section class="py-5">
     <div class="container px-5">
