--- a/Django_Docker/accounts/templates/account/password_reset_from_key_done.html
+++ b/Django_Docker/accounts/templates/account/password_reset_from_key_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}パスワード変更 | ないもの検知{% endblock %}
+{% block title %}パスワード変更 | ToolKeeper{% endblock %}
 
 {% block contents %}
 <div class="container">
