--- a/Django_Docker/toolkeeper_app/templates/group_delete.html
+++ b/Django_Docker/toolkeeper_app/templates/group_delete.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}グループ削除 | ToolKeeper{% endblock %}
+
+{% block active_group_list %}active{% endblock %}
+
 {% block contents %}
 <section class="py-5">
     <div class="container px-5">
