--- a/Django_Docker/accounts/templates/account/verification_sent.html
+++ b/Django_Docker/accounts/templates/account/verification_sent.html
@@ -2,6 +2,8 @@
 
 {% block title %}メールアドレス認証 | ToolKeeper{% endblock %}
 
+{% block active_signup %}active{% endblock %}
+
 {% block contents %}
 <div class="container">
     <div class="row">
