--- a/Django_Docker/toolkeeper_app/templates/group_list.html
+++ b/Django_Docker/toolkeeper_app/templates/group_list.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}グループ作成 | ToolKeeper{% endblock %}
+
+{% block active_group_list %}active{% endblock %}
+
 {% block contents %}
 <!-- Page content-->
 <section class="py-5">
