検索コメントアウト、調整

--- a/Django_Docker/toolkeeper_app/templates/history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/history_list.html
@@ -113,7 +113,7 @@ function clearFilters() {
 }
 
 function clearSearch() {
-    document.getElementById("id_search_query").value = "";
+    // document.getElementById("id_search_query").value = "";
     document.getElementById("id_checked_at").value = "";
 }
 
